opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-bfx"
bug-reports: "https://github.com/vbmithr/ocaml-bfx/issues"
dev-repo: "git+https://github.com/vbmithr/ocaml-bfx"
doc: "https://vbmithr.github.io/ocaml-bfx/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
depends: [
  "dune" {>= "1.11.4"}
  "bfx" {= version}
  "sexplib" {>= "v0.12.0"}
  "uuidm" {>= "0.9.7"}
  "ptime" {>= "0.8.5"}
  "yojson" {>= "1.7.0"}
  "ocplib-json-typed" {>= "0.7.1"}
]
synopsis: "BFX API"
description: """
"""
