(library
 (name        bfx)
 (public_name bfx)
 (modules bfx)
 (preprocess (pps ppx_sexp_conv))
 (libraries core ocplib-json-typed))

(library
 (name        bfx_rest)
 (public_name bfx-rest)
 (modules bfx_rest)
 (preprocess (pps ppx_sexp_conv))
 (libraries
  logs-async
  bfx
  core
  async
  yojson
  ocplib-json-typed
  cohttp-async
  base64
  digestif.c
  hex))

(library
 (name        bfx_ws)
 (public_name bfx-ws)
 (modules bfx_ws)
 (preprocess (pps ppx_sexp_conv))
 (libraries
  bs-devkit
  logs-async
  bfx
  core
  async
  yojson
  ocplib-json-typed
  async-uri
  digestif.c
  hex
  fastws-async))
