(library
 (name        bfx)
 (public_name bfx)
 (modules bfx)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   sexplib
   uuidm
   ptime
   logs
   yojson
   ocplib-json-typed))

(library
 (name        bfx_rest)
 (public_name bfx-rest)
 (modules bfx_rest)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   logs-async
   bfx
   core
   async
   yojson
   ocplib-json-typed
   fastrest))

(library
 (name        bfx_ws)
 (public_name bfx-ws)
 (modules bfx_ws)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   uuidm
   ptime
   bfx
   yojson
   ocplib-json-typed
   async-uri))

(library
 (name        bfx_ws_async)
 (public_name bfx-ws-async)
 (modules bfx_ws_async)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   bfx
   bfx-ws
   logs-async
   core
   async
   async-uri
   fastws-async))
