(library
 (name        bfx)
 (public_name bfx)
 (modules bfx)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   fixtypes
   sexplib
   uuidm
   ptime
   logs
   yojson
   ocplib-json-typed))

(library
 (name        bfx_rest)
 (public_name bfx-rest)
 (modules bfx_rest)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   bfx
   uri
   ocplib-json-typed
   fastrest))

(library
 (name        bfx_ws)
 (public_name bfx-ws)
 (modules bfx_ws)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   bfx
   sexplib
   uuidm
   ptime
   yojson
   ocplib-json-typed))
