(test
 (name       test)
 (modules    test)
 (package bfx-rest)
 (preprocess (pps ppx_let ppx_sexp_conv))
 (libraries
  bfx-rest
  alcotest-async
  logs-async-reporter))

(executable
 (name ws)
 (public_name bfx-cli)
 (modules ws)
 (package bfx-ws)
 (preprocess (pps ppx_let ppx_sexp_conv))
 (libraries
   bfx-ws
   yojson
   core
   async
   fastws-async
   logs-async-reporter))
